# wadl

./: Cargo.toml  README.md  deny.toml  disperse.conf  disperse.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: ast.rs  codegen.rs  lib.rs  parse.rs
tests/: ast_tests.rs  codegen_tests.rs  fish-eye-wadl.xml  jira_wadl.xml  lib_tests.rs  parse_tests.rs  parsing_tests.rs  sample-wadl.xml  yahoo-wadl.xml
