[package]
name = "wadl"
version = "0.2.7"
edition = "2021"
license = "Apache-2.0"
description = "A WADL parser for Rust"
repository = "https://github.com/jelmer/wadl"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
default-run = "wadlc"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"], optional = true }
env_logger = { version = "0.10.0", optional = true }
form_urlencoded = "1.2.1"
html2md = { version = "0.2.14", optional = true }
lazy_static = "1.4.0"
log = "0.4.21"
mime = "0.3.17"
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
reqwest = { version = "0.11.22", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.107"
syn = { version = "2", optional = true }
url = "2.4"
xmltree = "0.10.3"

[features]
default = ["cli"]
codegen = ["dep:proc-macro2", "dep:quote", "dep:syn", "dep:html2md"]
cli = ["dep:clap", "dep:env_logger", "codegen"]

[[bin]]
name = "wadlc"
path = "src/bin/wadlc.rs"
required-features = ["cli"]

[dev-dependencies]
maplit = "1.0.2"
