[package]
name = "wadl"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "A WADL parser for Rust"
repository = "https://github.com/jelmer/wadl"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
default-run = "wadlc"

[dependencies]
clap = { version = "4", features = ["derive", "env"], optional = true }
env_logger = { version = ">=0.10", optional = true }
form_urlencoded = "1.2.1"
html2md = { version = "0.2.14", optional = true }
lazy_static = "1"
log = "0.4.22"
mime = "0.3.17"
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
reqwest = { version = ">=0.11", features = ["json", "multipart"] }
serde_json = "1.0.132"
syn = { version = "2", optional = true }
url = "2"
xmltree = ">=0.10.0"
iri-string = { version = ">=0.7", features = ["std"] }
async-trait = { version = "0.1", optional = true }

[features]
default = ["cli", "blocking"]
codegen = ["dep:proc-macro2", "dep:quote", "dep:syn", "dep:html2md"]
cli = ["dep:clap", "dep:env_logger", "codegen"]
async = ["dep:async-trait"]
blocking = ["reqwest/blocking"]

[[bin]]
name = "wadlc"
path = "src/bin/wadlc.rs"
required-features = ["cli"]

[[bin]]
name = "wadl-ast"
path = "src/bin/wadl-ast.rs"
required-features = ["cli"]

[dev-dependencies]
maplit = "1.0.2"
